fixed various translations
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14363 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,16 @@
+2004-08-08  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* ca.po: Fixed Catalan file ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+	* hr.po: Fixed Croatian file ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+	* sr*.po: Fixed Serbian files ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+	* pa.po: Fixed Punjabi file ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+	* vi.po: Fixed Vietnamese file ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+
 2004-08-02  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
