--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-08  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* ca.po: Fixed Catalan file ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+	* vi.po: Fixed Vietnamese file ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+	* ms.po: Fixed Malay file ("<Image>/" and "<Toolbox>/" MUST NOT 
+	be translated)
+
 2004-07-17  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
@@ -10,7 +19,7 @@
 
 2004-07-01  Roman Joost <roman@bromeco.de>
 
-        * de.po: updated german translation, fixed typos and misstranslated
+	* de.po: updated german translation, fixed typos and misstranslated
           strings spotted by Michael Schumacher
         
 2004-07-01  Sven Neumann  <sven@gimp.org>
