2004-08-08  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/siod-wrapper.[ch] (siod_output_string): use
	g_strdup_vprintf() instead of guessing the string length. Also
	declare the function using G_GNUC_PRINTF().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14367 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-08  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/siod-wrapper.[ch] (siod_output_string): use
+	g_strdup_vprintf() instead of guessing the string length. Also
+	declare the function using G_GNUC_PRINTF().
+
 2004-08-08  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/ifscompose/README.ifscompose: fix out of date info,
