2004-08-08  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/siod/sliba.c (array_prin1): when printing a
	character array, don't flush the buffer for each byte but wait
	until it is filled.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14368 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-08-08  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/siod/sliba.c (array_prin1): when printing a
+	character array, don't flush the buffer for each byte but wait
+	until it is filled.
+
+2004-08-08  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/siod-wrapper.[ch] (siod_output_string): use
 	g_strdup_vprintf() instead of guessing the string length. Also
 	declare the function using G_GNUC_PRINTF().
