--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-09  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/postscript.c (save_ps_header): use the basename
+	as Title, not the full filename. Fixes bug #149669.
+
 2004-08-08  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/siod/sliba.c (array_prin1): when printing a
