--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-09  Sven Neumann  <sven@gimp.org>
+
+	* data/misc/gimp.desktop.in.in: added GenericName and Version,
+	updated Categories.
+
 2004-08-09  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/plug-ins.c
@@ -11,7 +16,7 @@
 
 2004-08-09  Hans Breuer  <hans@breuer.org>
 
-	* app/core/gimp-edit.c(gimp_edit_paste_as_new) :
+	* app/core/gimp-edit.c (gimp_edit_paste_as_new):
 	gimp_create_display() with the right parameters order 
 
 	* app/widgets/gimpwidgets-utils.c (gimp_message_box_set_icons)
