* plug-ins/common/unsharp.c: continuously show the (original) image   during a scrollbar movement.  This makes it easier to navigate.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14378 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-09  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/unsharp.c: continuously show the (original) image
+	during a scrollbar movement.  This makes it easier to navigate.
+
 2004-08-09  Michael Natterer  <mitch@gimp.org>
 
 	Applied (slightly modified) patch from Shlomi Fish which adds a
