--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-09  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/unsharp.c (unsharp_region): reset the progress
+	when done; some code cleanup.
+
 2004-08-09  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/unsharp.c: continuously show the (original) image
