2004-08-10  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/unsharp.c: don't show progress on the image
	window while updating the preview.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14380 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-10  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/unsharp.c: don't show progress on the image
+	window while updating the preview.
+
 2004-08-09  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/unsharp.c (unsharp_region): reset the progress
