--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-10  DindinX  <david@dindinx.org>
+
+	* app/core/gimpbrushgenerated.c: don't leak a file descriptor when
+	reading a bad .vbr file.
+
 2004-08-10  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/unsharp.c: don't show progress on the image
