Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14383 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-10  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-08-09  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Merged from gimp-2-0 branch.
