2004-08-10  Sven Neumann  <sven@gimp.org>
	* app/core/gimpbrushgenerated.c (gimp_brush_generated_load):
	plugged more file descriptor leaks.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14384 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-10  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpbrushgenerated.c (gimp_brush_generated_load):
+	plugged more file descriptor leaks.
+
 2004-08-10  DindinX  <david@dindinx.org>
 
 	* app/core/gimpbrushgenerated.c: don't leak a file descriptor when
