--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-10  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/blinds.c: GimpPreviewArea-ified.
+
+2004-08-10  DindinX  <david@dindinx.org>
+
 	* plug-ins/common/AlienMap2.c: Ported to GimpPreviewArea, use an enum
 	for the color model instead of some defines and use gboolean instead
 	of gint where appropriate.
