2004-08-10  Michael Natterer  <mitch@gimp.org>
	* POTFILES.in: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14387 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-10  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-08-10  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
