2004-08-11  Sven Neumann  <sven@gimp.org>
	* app/gui/file-open-location-dialog.c
	* app/widgets/gimpprogressbox.c: increased horizontal size request
	to reduce resizing.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14393 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-11  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/file-open-location-dialog.c
+	* app/widgets/gimpprogressbox.c: increased horizontal size request
+	to reduce resizing.
+
 2004-08-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpthumbbox.c (gimp_thumb_box_create_thumbnails):
