--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-11  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/noisify.c: converted to GimpPreviewArea.  Also added
+	scrollbars to move around.  The preview was rather useless without
+	them.
+
 2004-08-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdrawable-blend.c
