* plug-ins/common/plasma.c: converted to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14396 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-11  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/plasma.c: converted to GimpPreviewArea.
+
+2004-08-11  DindinX  <david@dindinx.org>
+
 	* plug-ins/common/noisify.c: converted to GimpPreviewArea.  Also added
 	scrollbars to move around.  The preview was rather useless without
 	them.
