--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-11  Michael Natterer  <mitch@gimp.org>
+
+	* etc/controllerrc: added a commented-out midi controller entry
+	with some example mappings.
+
 2004-08-11  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/plasma.c: converted to GimpPreviewArea.
