--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-11  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/waves.c: GimpPreviewArea-ified.
+
 2004-08-11  Michael Natterer  <mitch@gimp.org>
 
 	Restored sane sorting order for menus which are created
