--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-11  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimp.c
+	* app/core/gimpimagefile.c: converted tabs to spaces, cosmetic
+	changes.
+
 2004-08-11  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/waves.c: GimpPreviewArea-ified.
