2004-08-11  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcontainercombobox.[ch]
	* app/widgets/gimpcontainertreeview.c: when removing the last item
	from the view, manually clear all GimpCellRendererViewables'
	"renderer" properties; otherwise we have stale GimpPreviewRenderers
	with still-refed viewables hanging around in the cells.
	Works around GTK+ bug #149906.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14404 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-08-11  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontainercombobox.[ch]
+	* app/widgets/gimpcontainertreeview.c: when removing the last item
+	from the view, manually clear all GimpCellRendererViewables'
+	"renderer" properties; otherwise we have stale GimpPreviewRenderers
+	with still-refed viewables hanging around in the cells.
+	Works around GTK+ bug #149906.
+
+2004-08-11  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimp.c
 	* app/core/gimpimagefile.c: converted tabs to spaces, cosmetic
 	changes.
