--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-08-11  DindinX  <david@dindinx.org>
+
+	Removed the GimpOldPreview stuff. Die, crap, die!
+
+	* plug-ins/libgimpoldpreview/*: removed.
+
+	* plug-ins/Makefile.am
+	* plug-ins/common/Makefile.am: changed accordingly.
+
+	* plug-ins/common/max_rgb.c
+	* plug-ins/common/noisify.c
+	* plug-ins/common/tileit.c: removed last forgotten
+	#include "libgimpoldpreview.h".
+
 2004-08-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontainercombobox.[ch]
