Bad DindinX! Don't break the build!
* configure.in
* plug-ins/common/mkgen.pl
* plug-ins/common/plugin-defs.pl: removed libgimpoldpreview from here too.

* plug-ins/common/Makefile.am: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14406 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-08-11  DindinX  <david@dindinx.org>
 
+	Bad DindinX! Don't break the build!
+
+	* configure.in
+	* plug-ins/common/mkgen.pl
+	* plug-ins/common/plugin-defs.pl: removed libgimpoldpreview from
+	here too.
+
+	* plug-ins/common/Makefile.am: regenerated.
+
+2004-08-11  DindinX  <david@dindinx.org>
+
 	Removed the GimpOldPreview stuff. Die, crap, die!
 
 	* plug-ins/libgimpoldpreview/*: removed.
