2004-08-11  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14408 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,28 @@ release, GIMP 2.2, will emerge out of this.
 
 
 
+Overview of Changes in GIMP 2.1.4
+=================================
+
+- Rewritten internal handling of progress indicators. Embed progress
+  bars to the File Open dialog to reduce annoying dialogs popping up.
+
+- Ported remaining plug-ins to GimpPreviewArea and removed
+  GimpOldPreview.
+
+- Show progress while converting from RGB to Indexed Colors.
+
+- Better previews in Unsharp Mask and Scatter RGB plug-ins.
+
+- Added new plug-ins Cartoon, Neon, Photocopy and Softglow.
+
+Contributors:
+
+   Michael Natterer, Sven Neumann, David Odin, Shlomi Fish, Bill Skaggs,
+   Simon Budig, Ari Pollak, Spencer Kimball
+
+
+
 Overview of Changes in GIMP 2.1.3
 =================================
 
