--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-11  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-08-09  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Merged from gimp-2-0 branch.
