2004-08-12  Sven Neumann  <sven@gimp.org>
	* app/actions/context-actions.c: changed the icons to indicate
	what part of the context is affected by the action. Looks better
	in the shortcut editor.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14410 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-12  Sven Neumann  <sven@gimp.org>
+
+	* app/actions/context-actions.c: changed the icons to indicate
+	what part of the context is affected by the action. Looks better
+	in the shortcut editor.
+
 2004-08-11  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/cartoon.c
