* plug-ins/common/sel_gauss.c: added a preview.
* plug-ins/common/unsharp.c: removed unused variables.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14411 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-12  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/sel_gauss.c: added a preview.
+
+	* plug-ins/common/unsharp.c: removed unused variables.
+
 2004-08-12  Sven Neumann  <sven@gimp.org>
 
 	* app/actions/context-actions.c: changed the icons to indicate
