--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/sel_gauss.c
+	* plug-ins/common/unsharp.c: place the preview widget into the
+	upper left corner like all other plug-ins do.
+
+	* plug-ins/help/domain.c: added some (disabled) debug output.
+
 2004-08-12  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/sel_gauss.c: added a preview.
