--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-12  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/edge.c: added a preview.
+
 2004-08-12  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/sel_gauss.c
